修复404错误并移除利润计算器和工具页面

--- a/gemini_binding.html
+++ b/gemini_binding.html
@@ -116,7 +116,7 @@
         <div class="blob blob-3"></div>
     </div>
 
-    <a href="shop.html" class="floating-back-btn">
+    <a href="index.html" class="floating-back-btn">
         <i class="fa-solid fa-house"></i> 返回主页
     </a>
 
