--- a/guestbook.html
+++ b/guestbook.html
@@ -116,7 +116,7 @@
     </div>
 
     <!-- Floating Back Button -->
-    <a href="shop.html" class="floating-back-btn">
+    <a href="index.html" class="floating-back-btn">
         <i class="fa-solid fa-house"></i> 返回首页
     </a>
 
