调换留言板与Gemini位置，优化移动端小卡片布局

--- a/index.html
+++ b/index.html
@@ -120,10 +120,14 @@
             <div class="box-label">淘宝店铺</div>
         </div>
 
-        <!-- Guestbook Card (2x1) - Interactive -->
-        <div class="glass-box box-wide" onclick="openModal('guestbookModal')">
-            <i class="fa-regular fa-comment-dots icon-large" style="color: #f59e0b;"></i>
-            <div class="box-label">留言板</div>
+        <!-- Gemini Card (2x1) - Interactive -->
+        <div class="glass-box box-wide" onclick="openModal('geminiModal')">
+            <!-- Custom SVG for Gemini 4-point Star -->
+            <svg class="icon-large gemini-star" viewBox="0 0 24 24" fill="currentColor"
+                xmlns="http://www.w3.org/2000/svg" style="width: 48px; height: 48px;">
+                <path d="M12 0L14.5 9.5L24 12L14.5 14.5L12 24L9.5 14.5L0 12L9.5 9.5L12 0Z" />
+            </svg>
+            <div class="box-label">Gemini 专区</div>
         </div>
 
         <!-- 3D Design (1x1) -->
@@ -144,13 +148,10 @@
             <div class="box-label">Google 邮箱 / 账号服务</div>
         </a>
 
-        <div class="glass-box box-wide" onclick="openModal('geminiModal')">
-            <!-- Custom SVG for Gemini 4-point Star -->
-            <svg class="icon-large gemini-star" viewBox="0 0 24 24" fill="currentColor"
-                xmlns="http://www.w3.org/2000/svg" style="width: 48px; height: 48px;">
-                <path d="M12 0L14.5 9.5L24 12L14.5 14.5L12 24L9.5 14.5L0 12L9.5 9.5L12 0Z" />
-            </svg>
-            <div class="box-label">Gemini 专区</div>
+        <!-- Guestbook Card (2x1) - Interactive -->
+        <div class="glass-box box-wide" onclick="openModal('guestbookModal')">
+            <i class="fa-regular fa-comment-dots icon-large" style="color: #f59e0b;"></i>
+            <div class="box-label">留言板</div>
         </div>
     </div>
 
