--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Outfit:wght@500;700;800&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css?v=20251124">
     <style>
         /* Homepage entrance animation - Subtle */
         @keyframes slideInUp {
@@ -279,8 +279,9 @@
         </div>
     </div>
 
+    <!-- Elastic Press Effect -->
+    <script src="elastic-press.js"></script>
     <script src="script.js"></script>
-    <script src="glass-slider.js"></script>
 </body>
 
 </html>
