移动端弹窗强制瘦身：增加 max-height 限制并更新缓存版本

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Outfit:wght@500;700;800&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <link rel="stylesheet" href="style.css?v=20251124">
+    <link rel="stylesheet" href="style.css?v=20251124_2">
     <style>
         /* Homepage entrance animation - Subtle */
         @keyframes slideInUp {
