修复留言板功能和优化卡片交互效果
- 修复guestbook.js语法错误（多余的})
- 修复留言发布后不显示的问题（增加localStorage保存延迟到500ms）
- 优化图片上传逻辑，确保currentImageData正确管理
- 排除联系我们和淘宝店铺卡片的按压效果
- 为静态卡片添加悬浮凸起效果

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Outfit:wght@500;700;800&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <link rel="stylesheet" href="style.css?v=20251124_5_COMPACT">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    <link rel="stylesheet" href="style.css?v=20251124_FIX_FINAL">
     <style>
         /* Homepage entrance animation - Subtle */
         @keyframes slideInUp {
@@ -193,7 +193,7 @@
 
                 <div id="imagePreview" class="image-preview-compact" style="display: none;">
                     <img id="previewImg" src="" alt="Preview">
-                    <button type="button" class="remove-image-mini" onclick="removeImage()">
+                    <button type="button" class="remove-image-mini" id="removeImageBtn">
                         <i class="fas fa-times"></i>
                     </button>
                 </div>
@@ -280,8 +280,8 @@
     </div>
 
     <!-- Elastic Press Effect -->
-    <script src="elastic-press.js"></script>
-    <script src="script.js"></script>
+    <script src="elastic-press.js?v=20251124_FIX_FINAL"></script>
+    <script src="script.js?v=20251124_FIX_FINAL"></script>
 </body>
 
 </html>
