优化留言板和交互体验
- 调整留言卡片布局：昵称显示在留言内容上方
- 缩小昵称和头像尺寸，增大评论文字尺寸
- 优化弹簧物理参数：降低stiffness至0.05，提高damping至0.88
- 优化CSS过渡效果：使用ease-out实现更平滑的悬浮动画
- 增加留言板过渡时间至0.4s，提升整体流畅度

--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
     </div>
 
     <!-- Elastic Press Effect -->
-    <script src="elastic-press.js?v=20251124_FIX_FINAL"></script>
+    <script src="elastic-press.js?v=20251124_SMOOTH_V2"></script>
     <script src="script.js?v=20251124_FIX_FINAL"></script>
 </body>
 
