--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
     </div>
 
     <!-- Elastic Press Effect -->
-    <script src="elastic-press.js?v=20251124_SMOOTH_V2"></script>
+    <script src="elastic-press.js?v=20251124_RESTORED"></script>
     <script src="script.js?v=20251124_FIX_FINAL"></script>
 </body>
 
