Refine Google guide and modal layout

--- a/google_guide.html
+++ b/google_guide.html
@@ -139,13 +139,9 @@
                 <p><a href="http://2fa.run/2fa/g44ltzb5y2t7zrtwanstk3uvsk25fgh3"
                         target="_blank">http://2fa.run/2fa/g44ltzb5y2t7zrtwanstk3uvsk25fgh3</a></p>
 
-                <!-- Placeholder for CleanShot image -->
-                <div
-                    style="background: rgba(255,255,255,0.1); padding: 20px; border-radius: 12px; text-align: center; margin: 20px 0; border: 1px dashed rgba(255,255,255,0.3);">
-                    <i class="fa-regular fa-image"
-                        style="font-size: 48px; color: rgba(255,255,255,0.5); margin-bottom: 10px;"></i>
-                    <p style="color: rgba(255,255,255,0.7);">2FA 示例图片 (CleanShot)</p>
-                </div>
+                <!-- 2FA Image -->
+                <img src="assets/2fa_code.png" alt="2FA Code Example"
+                    style="border-radius: 12px; margin: 20px 0; border: 1px solid rgba(255,255,255,0.1);">
 
                 <h2>二、谷歌邮箱登录流程</h2>
 
@@ -168,9 +164,6 @@
                     <li>新gmail邮箱登录后不要马上修改密码。立即修改密码造成的手机验证无售后</li>
                 </ol>
 
-                <h2>账号信息：</h2>
-
-                <p>hothuchi13@gmail.com----FYw3a4TyMR----hothuchi1369166@biggmail.online</p>
 
             </div>
         </div>
