--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
                 高质量谷歌账号服务
             </p>
 
-            <div class="modal-grid">
+            <div class="modal-grid" style="display: flex; justify-content: center;">
                 <a href="google_guide.html" class="modal-link-card">
                     <i class="fa-solid fa-book"></i>
                     <div class="link-title">使用规范</div>
