Update layout to wide blocks and optimize guide styles

--- a/index.html
+++ b/index.html
@@ -137,14 +137,14 @@
             <div class="box-label">闲鱼店铺</div>
         </div>
 
-        <!-- 3D Design (1x1) -->
-        <div class="glass-box box-small" onclick="openModal('comingSoonModal')">
+        <!-- 3D Design (2x1) - Wide -->
+        <div class="glass-box box-wide" onclick="openModal('comingSoonModal')">
             <i class="fa-solid fa-cube icon-large" style="color: #06b6d4;"></i>
             <div class="box-label">三维设计</div>
         </div>
 
-        <!-- Post-production (1x1) -->
-        <div class="glass-box box-small" onclick="openModal('comingSoonModal')">
+        <!-- Post-production (2x1) - Wide -->
+        <div class="glass-box box-wide" onclick="openModal('comingSoonModal')">
             <i class="fa-solid fa-clapperboard icon-large" style="color: #8b5cf6;"></i>
             <div class="box-label">影视后期</div>
         </div>
