--- a/index.html
+++ b/index.html
@@ -24,27 +24,40 @@
     <!-- Firebase SDK -->
     <script type="module">
         import { initializeApp } from 'https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js';
-        import { getAuth, createUserWithEmailAndPassword, signInWithEmailAndPassword, onAuthStateChanged, signOut } from 'https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js';
-
+        import { getAuth, createUserWithEmailAndPassword, signInWithEmailAndPassword, onAuthStateChanged, signOut, updateProfile } from 'https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js';
+        import { getFirestore, doc, setDoc, getDoc, collection, addDoc, query, orderBy, onSnapshot, limit } from 'https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore.js';
         const firebaseConfig = {
-            apiKey: "AIzaSyAf5NpteGs3I7XnXbuQtEd_wBfp_tFuLOk",
-            authDomain: "zaoyoe-studio.firebaseapp.com",
-            projectId: "zaoyoe-studio",
-            storageBucket: "zaoyoe-studio.firebasestorage.app",
-            messagingSenderId: "1017068787594",
-            appId: "1:1017068787594:web:4f9bd3f95dd5d9b03ada73",
-            measurementId: "G-PEWLPYE78G"
+            apiKey: "AIzaSyDBk5juaw5qNSPFiZVSqRJWfllEtrD6oWg",
+            authDomain: "zaoyoe-9bdf2.firebaseapp.com",
+            projectId: "zaoyoe-9bdf2",
+            storageBucket: "zaoyoe-9bdf2.firebasestorage.app",
+            messagingSenderId: "908400021338",
+            appId: "1:908400021338:web:e0bff6e65ff55d2b7b6d63"
         };
 
         const app = initializeApp(firebaseConfig);
         const auth = getAuth(app);
+        const db = getFirestore(app);
 
-        // Make auth available globally
+        // Make auth and db available globally
         window.firebaseAuth = auth;
+        window.firebaseDB = db;
         window.createUserWithEmailAndPassword = createUserWithEmailAndPassword;
         window.signInWithEmailAndPassword = signInWithEmailAndPassword;
         window.onAuthStateChanged = onAuthStateChanged;
         window.signOut = signOut;
+        window.updateProfile = updateProfile;
+
+        // Firestore functions
+        window.firestoreDoc = doc;
+        window.firestoreSetDoc = setDoc;
+        window.firestoreGetDoc = getDoc;
+        window.firestoreCollection = collection;
+        window.firestoreAddDoc = addDoc;
+        window.firestoreQuery = query;
+        window.firestoreOrderBy = orderBy;
+        window.firestoreOnSnapshot = onSnapshot;
+        window.firestoreLimit = limit;
     </script>
     <style>
         /* Homepage entrance animation - Subtle */
@@ -215,9 +228,7 @@
                 欢迎留下您的宝贵建议,或告诉我们您期待上架的商品。
             </p>
             <form class="guestbook-form" id="guestbookForm">
-                <div class="input-group">
-                    <input type="text" id="guestName" placeholder="您的昵称 (Name)" required>
-                </div>
+                <!-- Nickname input removed - Will use logged in user -->
 
                 <div class="input-group relative-container">
                     <textarea id="guestMessage" placeholder="写下您的留言... (Message)" required></textarea>
@@ -232,9 +243,9 @@
                     </div>
                 </div>
 
-                <div id="imagePreview" class="image-preview-compact" style="display: none;">
+                <div id="imagePreview" class="image-preview-container" style="display: none;">
                     <img id="previewImg" src="" alt="Preview">
-                    <button type="button" class="remove-image-mini" id="removeImageBtn">
+                    <button type="button" class="remove-image-btn" id="removeImageBtn">
                         <i class="fas fa-times"></i>
                     </button>
                 </div>
@@ -345,15 +356,49 @@
     </div>
 
     <!-- Login Trigger Button (Top Right) -->
-    <div class="top-right-nav">
-        <button class="login-trigger-btn" onclick="openAuthModal('login')">
-            <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
-                stroke-linecap="round" stroke-linejoin="round">
-                <path d="M20 21v-2a4 4 0 0 0-4-4H8a4 4 0 0 0-4 4v2"></path>
-                <circle cx="12" cy="7" r="4"></circle>
-            </svg>
-            Account
+    <div class="top-right-nav" style="position: absolute; top: 30px; right: 40px; z-index: 100;">
+        <button id="authBtn" class="login-trigger-btn" onclick="handleAuthClick()">
+            <!-- Default Icon (shown when logged out) -->
+            <i id="defaultAuthIcon" class="fas fa-user-circle" style="font-size: 1.2rem;"></i>
+
+            <!-- User Avatar (shown when logged in) -->
+            <img id="navUserAvatar" class="nav-user-avatar" src="" alt="Avatar" style="display: none;">
+
+            <span id="authBtnText">Sign In</span>
         </button>
+
+        <div id="userDropdown" class="user-dropdown">
+            <div class="menu-item" id="profileMenuItem"
+                style="position: relative; cursor: default; background: none !important; padding-bottom: 20px;">
+                <div style="position: relative; cursor: pointer;"
+                    onclick="document.getElementById('avatarUpload').click()">
+                    <img id="dropdownAvatar" class="nav-user-avatar" src="" alt="Avatar"
+                        style="width: 64px; height: 64px; border: 2px solid rgba(255,255,255,0.2); transition: transform 0.1s;">
+                    <!-- Overlay Icon for Change Avatar -->
+                    <div class="avatar-overlay-icon">
+                        <i class="fas fa-camera"></i>
+                    </div>
+                </div>
+                <div style="display: flex; flex-direction: column; gap: 4px; margin-left: 12px;">
+                    <span id="profileEmail" style="font-weight: 600; font-size: 18px;">Profile</span>
+                </div>
+            </div>
+
+            <!-- Hidden File Input -->
+            <input type="file" id="avatarUpload" accept="image/*" style="display: none;"
+                onchange="handleAvatarUpload(event)">
+
+            <div class="divider" style="margin: 5px 0; border-top: 1px solid rgba(255,255,255,0.1);"></div>
+
+            <div class="menu-item logout" onclick="handleLogout()">
+                <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                    <path d="M9 21H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h4"></path>
+                    <polyline points="16 17 21 12 16 7"></polyline>
+                    <line x1="21" y1="12" x2="9" y2="12"></line>
+                </svg>
+                Log Out
+            </div>
+        </div>
     </div>
 
     <!-- Auth Modal (Dual Mode) -->
@@ -448,8 +493,8 @@
     </div>
 
     <!-- Elastic Press Effect -->
-    <script src="elastic-press.js?v=20251124_RESTORED"></script>
-    <script src="script.js?v=20251124_FIX_FINAL"></script>
+    <script src="elastic-press.js?v=20251124_RESTORED" defer></script>
+    <script src="script.js?v=20251124_FIX_FINAL" defer></script>
 </body>
 
 </html>
